
2024-08-10  Simon Sobisch <simonsobisch@gnu.org>

	* DEPENDENCIES, NEWS: document usage of libiconv

2024-08-06  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: new option --with-iconv

2024-05-14  David Declerck <david.declerck@ocamlpro.com>

	* configure.ac: update flags for building dynamic libraries on macOS
	  (helps fixing testsuite issues on recent macOS versions)

2024-05-02  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: use pkg-config (with a fallback to ncurses-config) for
	  getting link / compile information for ncurses/ncursesw; now honoring
	  NCURSES_CONFIG, NCURSES_LIBS and NCURSES_FLAGS; document XML2_CONFIG

2023-10-17  David Declerck <david.declerck@ocamlpro.com>

	* configure.ac: add checks to allow using stdint.h and inttypes.h

2023-08-22  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: add -fstack-clash-protection to --enable-hardening[=no]

2023-07-28  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac, NEWS: updated for 3.2
	* configure.ac: check for mousemask and mmask_t

2023-07-24  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: fix for resolving COBCRUN_NAME

2023-05-25  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* configure.ac: added test for HAVE_RESIZE_TERM function

2023-04-25  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: try to error on warnings during checks, cleanup of resulting
	  unexpected test failures
	* configure.ac: drop deprecated-non-prototype warning in clang
	* configure.ac: add LIBCOB_LIBS while checking for libraries
	* configure.ac: added check for HAVE_ATTRIBUTE_CONSTRUCTOR

2023-04-05  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: pass --enable-debug to autoconf generated files as
	  COB_ENABLE_DEBUG, currently used for running extra test cycles in
	  the test suite

2023-03-03  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: allow specification of XML2_CONFIG (only used if
	  pkg-config module libxml-2.0 is not available)